clearing nousage